css/sgui.css
/**
 * SoftGanz Ui CSS
 * Created :: 2020-10-01
 * Modify  :: 2025-12-08
 * Version :: 29
 */

@charset "UTF-8";

/* Start of new UI style widget */
:root {
	--appbar-bg-color: unset;
	--appbar-text-color: unset;
	--appbar-btn-bg-color: unset;
	--appbar-btn-bg-color-hover: unset;
	--appbar-nav-bg-color: unset;
	--appbar-nav-btn-bg-color: unset;
	--appbar-nav-btn-hover-color: unset;
	--appbar-nav-text-color: unset;
	--appbar-trailing-text-color: unset;

	--card-bg-color: unset;
	--side-nav-hover-bg-color: unset;

	--sidebar-bg-color: #f6f6f6;

	--color-1: #E9F7EF; --color-1-border: #84AA8A;
	--color-2: #E7EFFB; --color-2-border: #6A768B;
	--color-3: #F4E7D1; --color-3-border: #999070;
	--color-4: #FCEDE8; --color-4-border: #8C6A67;
	.widget-inlineedit {
		--font-color: inherit;
	}
}

.module.-app-theme-dark {
	--sidebar-bg-color: #f6f6f6;

	.widget-inlineedit {
		--font-color: #979797;
	}
}

.-spacer {flex: 1 !important;}

[class^="widget-"]{
	* {box-sizing: border-box;}
	&.-main-axis-start {justify-content: flex-start;}
	&.-main-axis-center {justify-content: center;}
	&.-main-axis-end {justify-content: flex-end;}
	&.-main-axis-spacearound {justify-content: space-around;}
	&.-main-axis-spacebetween {justify-content: space-between;}
	&.-main-axis-spaceevenly {justify-content: space-evenly;}
	&.-cross-axis-start {align-items: flex-start;}
	&.-cross-axis-center {align-items: center;}
	&.-cross-axis-end {align-items: flex-end;}
}

/* widget-button */
.widget-button, .btn {
	--normal-text-color: unset;
	--normal-bg-color: transparent;

	--primary-text-color: #E5F2FF;
	--primary-bg-color: #057BFF;

	--secondary-text-color: #666;
	--secondary-bg-color: #eee;

	--success-text-color: #c5ffc6;
	--success-bg-color: #5FB660;

	--info-text-color: #E5F2FF;
	--info-bg-color: #60C0DC;

	--warning-text-color: #ffedd5;
	--warning-bg-color: #EEAC57;

	--danger-text-color: #FFE0E0;
	--danger-bg-color: #D75452;

	--link-text-color: #666;
	--link-bg-color: transparent;

	--cancel-text-color: #999;
	--cancel-bg-color: transparent;

	--floating-text-color: #FFE0E0;
	--floating-bg-color: #DB4437;

	--disabled-text-color: #a0a0a0;
	--disabled-bg-color: #d0d0d0;
}

.widget-button, .btn {
	box-sizing: border-box;
	display: inline-flex;
	flex-wrap: nowrap;
	margin: 0px;
	padding: 4px 8px;
	font-weight: normal;
	border: none;
	border-radius: 36px;
	cursor: pointer;
	align-items: center;
	box-shadow: none;

	&:hover {filter: brightness(0.95);}
	&.-normal {color: var(--normal-text-color); background-color: var(--normal-bg-color);}

	&.-primary {
		color: var(--primary-text-color); background-color: var(--primary-bg-color);
		>.icon {color: var(--primary-text-color);}
	}

	&.-secondary {
		color: var(--secondary-text-color); background-color: var(--secondary-bg-color);
		>.icon {color: var(--secondary-text-color);}
	}

	&.-success {
		color: var(--success-text-color); background-color: var(--success-bg-color);
		>.icon {color: var(--success-text-color);}
	}

	&.-info {
		color: var(--info-text-color); background-color: var(--info-bg-color);
		>.icon {color: var(--info-text-color);}
	}

	&.-warning {
		color: var(--warning-text-color); background-color: var(--warning-bg-color);
		>.icon {color: var(--warning-text-color);}
	}

	&.-danger {
		color: var(--danger-text-color); background-color: var(--danger-bg-color);
		>.icon {color: var(--danger-text-color);}
	}

	&.-link {
		color: var(--link-text-color); background-color: var(--link-bg-color);
		>.icon {color: var(--link-text-color);}
	}

	&.-cancel {
		color: var(--cancel-text-color); background-color: var(--cancel-bg-color); margin-right: 16px;
		>.icon {color: var(--cancel-text-color);}
	}

	&.-floating {
		color: var(--floating-text-color); background-color: var(--floating-bg-color); box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
		>.icon {color: var(--floating-text-color);}
	}

	&.-default {
		padding: 0;
		&:has(:only-child) {padding: 0;}
		>span {white-space: wrap; padding: 0;}
	}

	&.-circle24 {width: 24px; height: 24px; padding: 0px; border-radius: 50%;}
	&.-circle32 {width: 32px; height: 32px; padding: 4px !important; border-radius: 50%;}
	&.-circle48 {width: 48px; height: 48px; padding: 12px !important; border-radius: 50%;}

	/*
	button.btn.-circle32 {width: 32px; height: 32px; padding: 0;}
	button.btn.-circle48 {width: 48px; height: 48px; padding: 0;}
	&.-primary>.icon {opacity: 0.8;}
	&.-primary>.icon.-material {color: #f5f5f5;}
	&.-primary>span {opacity: 0.9;}
	&.-floating.-right {right: 16px; position: absolute;}
	&.-floating.-bottom {bottom: 16px; position: fixed;}
	&.-floating .icon.-material {color: #ffc8c3;}
	*/

	&.-no-wrap {flex-wrap: nowrap;}
	&.-big {padding-top: 16px; padding-bottom: 16px; border-radius: 64px; font-size: 1.8rem;}
	&.-hidden {display: none;}
	&:has(:only-child) {padding: 4px;}
	&:has(.-desc) {border-radius: 128px;}
	&.-fill {width: 100%; padding-left: 0; padding-right: 0; justify-content: center;}
	&.-wrap {white-space: normal;}
	&.-disabled {
		color: var(--disabled-text-color); background-color: var(--disabled-bg-color);
		.icon {color: var(--disabled-text-color);}
	}
	&.-active {box-shadow: 0 0 0 1px #ffba8c inset;}

	&.-upload>input.form-file {display: none;}
	&.-upload>label {margin: 0;}
	&.-sg-text-center .icon {display: block; margin: 0 auto;}

	>span>em {font-weight: normal; font-size: 1.2rem; font-style: normal; display: block;}
	>.-desc {flex: 0 0 100%; text-align: center; font-size: 1.2rem;}
	>.icon {margin: 0;}
	>.icon:only-child {margin: 0;}
	>span {padding: 0 6px; white-space: nowrap;}
	>span.-hidden {display: none;}
	>.icon+span {padding-left: 4px;}
	>.icon-group {padding: 0;}
}

/* widget-floatingactionbutton */
.widget-floatingactionbutton {
	position: fixed; margin: 0 auto; bottom: 8px; z-index: 1000; display: flex; flex-wrap: wrap; width: calc(100% - 16px); padding: 0 8px;

	>* {flex: 1 0 100%; text-align: right; margin-top: 8px;}
	&:hover>.-item>a {display: inline-block;}
}
/* ... */

